disable parallax on mobile and fix webkit animations

--- a/src/style.scss
+++ b/src/style.scss
@@ -98,6 +98,7 @@ a:focus {
 // }
 .fade-in-from-black {
   animation: fade-in-from-black 1s ease-out 1;
+  -webkit-animation: fade-in-from-black 1s ease-out 1;
   z-index: 100 !important;
   position: relative;
 }
@@ -119,19 +120,41 @@ a:focus {
     bottom: 0;
     left: 0;
     right: 0;
-    background: none;
+    // background: none;
+    background-position: 0 -100%;
   }
 }
-
-@keyframes fade-in {
+@-webkit-keyframes fade-in-from-black {
   0% {
-    opacity: 0;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(40, 44, 52, 1);
+    z-index: 100 !important;
   }
   100% {
-    opacity: 1;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    // background: none;
+    background-position: 0 -100%;
   }
 }
+// @keyframes fade-in {
+//   0% {
+//     opacity: 0;
+//   }
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
-.fade-in {
-  animation: fade-in 2s ease-out 1;
-}
+// .fade-in {
+//   animation: fade-in 2s ease-out 1;
+// }
